feat: add banner

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<html>
-<head> 
-<title>Анкета </title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV</title>
+        <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon.ico">
 </head>
-<body> 
-    Frantsuzova Nadezhda 
-    <br>
-    фото
-    <img src="https://user-images.githubusercontent.com/105450665/172068649-9b77c3b1-4763-4f90-8de4-6db708d2f125.jpg">
-    <br>
-    telephone: 89371871290  
-    <br>
-    My goal is to master a new profession, I hope thanks to perseverance, diligence and perseverance I will succeed!
-Programming in 1C language
-    <br>
-    CV
-    <br>
-    Srednespecial POVT and AS, Higher SSISK, courses in 1c programming
-technical English at the elementary level
+<body>
+
+    <p class="font-family">
+
+        <section class="section" id="profile">
+         
+        </section>      
+    </p>
+    
 </body>
 </html>
