updating the layout3

--- a/travel/index.html
+++ b/travel/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    
+    <frameset cols="*,*,*,*"> <frame src="../file_path/frame_1.html"> <frame src="frame_2.html"> <frame src="frame_3.html"></frameset>
     <header>
         <nav>
             <ul class="top-menu">
@@ -67,7 +67,7 @@
             <ul>
                 <li><p><a href="https://github.com/NadyaFrancuzova">NadyaFrancuzova</a></p></li>
                 <li><p>2022</p></li> 
-                <li><p><a href="https://rs.school/js/"></a><img class="logo" src="/rsschool-cv/assets/img/logo-rs.svg" alt="Логотип" width="100"></p></li>
+                <li><p><a href="https://rs.school/js/"></a><img class="logo" src="/assets/img/logo-rs.svg" alt="Логотип" width="100"></p></li>
             </ul>
         </div>
     </footer>
